--- a/src/lib/css/index.scss
+++ b/src/lib/css/index.scss
@@ -300,6 +300,7 @@ $borderRadius_width: 8px;
 
     // 预览区域
     .for-editor-preview {
+      border-left: 1px solid #ddd;
       .for-markdown-preview {
         line-height: 2;
     
